# MKGA

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test.py  train.py
docs/: DATA_FORMAT.md
mkga/: __init__.py  dataset.py  paths.py
mkga/models/: __init__.py  lora_linear.py  resnet34.py  resnet34_mkga.py  resnet34_resmkga.py  sam.py  sam_mkga.py  sam_resmkga.py
mkga/optim/: __init__.py  pcgrad.py
scripts/: common.sh  run_ablations.sh  run_test.sh  run_train.sh
weights/: README.md
