[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mkga-thyroid"
version = "1.0.0"
description = "Multi-Kernel Gated Attention for thyroid multi-task learning"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy",
    "pandas",
    "scikit-learn",
    "tqdm",
    "opencv-python-headless",
    "albumentations>=1.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mkga*"]
